--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.1.0",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
@@ -40,6 +41,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "vite": "^6.2.1"
   }
 }
