--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: echo ${{ secrets.PRD_ENV_F }} > src/environments/environment.production.ts
       - run: npm ci --legacy-peer-deps && npm run build
       - run: y
       - uses: FirebaseExtended/action-hosting-deploy@v0
