--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Create prod env file
-      - run: |
-              echo '${{ secrets.PRD_ENV_F }}' > src/environments/environment.production.ts
+      - run: echo ${{ secrets.PRD_ENV_F }} > ./src/environments/environment.production.ts
 
       - name: install deps
       - run: npm ci --legacy-peer-deps && npm run build
