--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: echo ${{ secrets.PRD_ENV_F }} > ./src/environments/environment.production.ts
+      - run: echo ${{ secrets.PRD_ENV_F }} > ./src/environments/environment.prd.ts
 
       - run: npm ci --legacy-peer-deps && npm run build
       - run: y
