--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,6 @@ testem.log
 .DS_Store
 Thumbs.db
 /src/environments/
+/src/environments/*
 /src/environments/environment.development.ts
 /src/environments/environment.production.ts
