--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,7 +16,9 @@ jobs:
 
 #      - run: echo '${{ secrets.PRD_ENV_F }}' > src/environments/environment.production.ts
 
-      - run: npm ci --legacy-peer-deps && npm run build
+      - run: npm ci --legacy-peer-deps
+      - run: npm test
+      - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
