--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 #      - run: echo '${{ secrets.PRD_ENV_F }}' > src/environments/environment.production.ts
-      - run: npm ci --legacy-peer-deps && npm run build
+      - run: npm ci --legacy-peer-deps
+      - run: npm test
+      - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
