--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,11 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-#      - run: echo '${{ secrets.PRD_ENV_F }}' > src/environments/environment.production.ts
-
+      - run: echo '${{ secrets.PRD_ENV_F }}' > src/environments/environment.production.ts
       - run: npm ci --legacy-peer-deps
-#      - run: npm test
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
